2007-04-18  Tim-Philipp Müller  <tim at centricular dot net>

	* src/htdocs/lists/index.xml:
	  Fix copy'n'paste mistake.

2007-04-18  Tim-Philipp Müller  <tim at centricular dot net>

	* src/htdocs/lists/index.xml:
	  Fix links to mailing list archives. Move unused lists to the bottom.

2007-04-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/copy/releases/releases.ics:
	  End calendar only once.

2007-04-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/Makefile.am:
	  Fix make rule to copy on update.

2007-04-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/copy/releases/releases.ics:
	  Updated releases.ics file with this command:
	  moap doap -f "/home/thomas/gst/head/*/*.doap" ical

2007-04-16  Tim-Philipp Müller  <tim at centricular dot net>

	* src/htdocs/bindings/bindings.xml:
	  Add some direct links to documentation for the GStreamer-Perl
	  bindings; move gst-python link from perl to gst-python section.

2007-04-06  David Schleef  <ds@schleef.org>

	* src/htdocs/apps/index.xml:
	  Add iStream

2007-03-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/apps/index.xml:
	  Add an application

2007-03-10  Tim-Philipp Müller  <tim at centricular dot net>

	* src/htdocs/bugs/bugs.xml:
	  Add more milestones (could someone upload/update the website please?
	  the auto-upload/rebuild never seems to work for me).

2007-03-07  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-base/0.10.12.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gstreamer/0.10.12.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:

	Release GStreamer and Base 0.10.12.

2007-03-03  David I. Lehn  <dlehn@users.sourceforge.net>

	* bin/planet-update:
	  Config file and build dir changes (temporarily to my dir).
	* planet/config.ini:
	  Remove incomplete ChangeLogish cruft.