@@ -1,3 +1,10 @@
+# copied from copy/
+images = \
+        gstreamer-logo.svg
+
+$(images):
+	cp $(top_srcdir)/copy/artwork/$@ $@
+
 built_pages = index.html
 
 include $(top_srcdir)/html.make
