@@ -22,7 +22,7 @@
     <a href="/data/images/artwork/gstreamer-logo-50.png">GStreamer logo 50px</a><br/>
     <a href="/data/images/artwork/gstreamer-logo-75.png">GStreamer logo 75px</a><br/>
     <h2>Artwork created by Jakub "Jimmac" Steiner</h2>
-    <a href="http://jimmac.musichall.cz/index.php3" taget="new">artists homepage</a>  
+    <a href="http://jimmac.musichall.cz/index.php3" taget="new">artist's homepage</a>  
     Licence: GPL<br/>
     <br/>
     desktop wallpaper: (1280x1024)<br/>
@@ -35,6 +35,7 @@
     <a href="gstreamer-logo.svg">GStreamer logo SVG format</a>
 
     <h2>More artwork ...</h2>
-    If you want your gstreamer related artwork to be seen here, please sent it to us.
+    If you want your GStreamer-related artwork added to this page,
+    please send it to us.
   </body>
 </page>
