@@ -1,3 +1,10 @@
+2007-04-29  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* src/htdocs/artwork/Makefile.am:
+	  Fix svg.  Who added this without even verifying the link ?
+	* src/htdocs/artwork/index.xml:
+	  Fix typos.
+
 2007-04-18  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* src/htdocs/lists/index.xml:
